k8s/postgress_deploy.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
     matchLabels:
       component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
        - name: postgres
          image : postgres
          ports:
            - containerPort: 5432

          volumeMounts: # use the volume that is claimed in below PVC
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres

      volumes: # tells pods which pvc to be used.
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: db-pvc-claim
