k8s/redis_cluster_ip_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-svc
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
  - port: 6379
    targetPort: 6379
