k8s/server_cluster_ip_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-svc
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
  - port: 5000
    targetPort: 5000
